# asset_hub_xcm_minimal_indexer

./: Cargo.toml  README.md
.github/actions/init/: action.yml
.github/workflows/: ci.yml
src/: cli.rs  error.rs  helpers.rs  incoming_parser.rs  main.rs  outgoing_parser.rs  parser.rs  serializer.rs  types.rs
