[package]
name = "xcm_minimal_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"]}
hex = "0.4.3"
serde = "1.0.219"
serde_json = "1.0.140"
sp-core = "36.1.0"
subxt = {version = "0.42.1", features=["jsonrpsee"]}
thiserror = "2.0.12"
tokio = { version = "1.45.0", features=["full"]}
